fix: decrease map z-indexto prevent its controls overlapping other elements

--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -7,7 +7,7 @@
   left: 0;
   width: 100%;
   height: $header-height;
-  z-index: 10000;
+  z-index: 1;
 }
 
 mat-toolbar {
